Add integration tests with Neo4j testcontainers